@@ -73,6 +73,7 @@
 - [ ] Make a top-level DEPENDENCIES file (from CI/before_install.sh)
   and remove all others
 ***** TODO Correct NEW project setup
+      CLOCK: [2016-01-16 sam. 19:49]--[2016-01-16 sam. 20:38] =>  0:49
       CLOCK: [2016-01-05 mar. 22:14]--[2016-01-05 mar. 22:20] =>  0:06
       CLOCK: [2016-01-05 mar. 21:24]--[2016-01-05 mar. 21:41] =>  0:17
       CLOCK: [2016-01-04 lun. 19:42]--[2016-01-04 lun. 19:56] =>  0:14
@@ -86,14 +87,14 @@
   - [X] in services/
   - [X] in src/logger/
   - [X] in website/
-- [ ] The client can't find plugins.cfg, so we have an Ogre error
+- [-] The client can't find plugins.cfg, so we have an Ogre error
   =Error: Shell widget menu has zero width and/or height=
-  - [ ] To avoid copying this file in build dir, we could add
-    its name from the CMake root dir in config.h
-    - But what to do when game is installed ?
-  - [ ] We also have to create them from *.cfg.in (with ressources.cfg)
+  - [X] We also have to create them from *.cfg.in (with ressources.cfg)
+    The generated file is dirctly generated in client's binary dir.
+- [ ] Now, We have to generate resources.cfg the same way
 - [ ] Find how to compute FT and SLOC for the now-global TODO version
 - [ ] Individual project README items should go here
+- [ ] Logger prints full pathname with the filename, fix it
 ***** DONE Must install cookiechoices on rainbrurpg.org
   CLOCK: [2015-09-27 dim. 18:21]--[2015-09-27 dim. 19:30] =>  1:09
 - [X] For reference
