@@ -5,3 +5,4 @@ PluginFolder=@OGRE_PLUGINDIR@
 
 # Define plugins
 Plugin=RenderSystem_GL
+
